topic redirect check

--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -1,5 +1,5 @@
 
-  <input  class="topic" *ngIf="!TopicSelected" type="text" placeholder="Enter Topic" [(ngModel)]="topic">
+  <!-- <input  class="topic" *ngIf="!TopicSelected" type="text" placeholder="Enter Topic" [(ngModel)]="topic"> -->
 
 <button class="play" mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 <!-- <div> -->
