--- a/src/app/four-players/four-players.component.html
+++ b/src/app/four-players/four-players.component.html
@@ -1,19 +1,19 @@
-<input class="topic" *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
+<!-- <input class="topic" *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic"> -->
 <button class="play" mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 
 <div class="opponent" *ngIf="!start && Waiting">
-   Waiting for opponent to join...
+  Waiting for opponent to join...
 </div>
 
 <div *ngIf="start && !gameOver">
   <mat-card class="questions">
-      <h2 >{{currentQuestion.question}}</h2><br>
-      <mat-radio-group class="options">
-         <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o)">
-           {{o.optionName}}<br>
-          </mat-radio-button>
-      </mat-radio-group>
-      <br>
+    <h2>{{currentQuestion.question}}</h2><br>
+    <mat-radio-group class="options">
+      <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o)">
+        {{o}}<br>
+      </mat-radio-button>
+    </mat-radio-group>
+    <br>
   </mat-card>
 
 
@@ -28,18 +28,16 @@
 
 <mat-card *ngIf="!start && gameOver">
   Players not found...Go Back
-  <button mat-raised-button  color="primary" [routerLink]="['/play']">
+  <button mat-raised-button color="primary" [routerLink]="['/play']">
     Go Back</button>
 </mat-card>
 
 <div id="clock" *ngIf="start && !gameOver">
   {{counter}}
-  </div>
-
-  <div class="result">
-<mat-card *ngIf="start && gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
-<!-- <mat-card *ngIf="gameOver && score<forignUserScore">Opponent Wins</mat-card>
-<mat-card *ngIf="gameOver && score===forignUserScore">It's a Draw</mat-card> -->
 </div>
 
-
+<div class="result">
+  <mat-card *ngIf="start && gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
+  <!-- <mat-card *ngIf="gameOver && score<forignUserScore">Opponent Wins</mat-card>
+<mat-card *ngIf="gameOver && score===forignUserScore">It's a Draw</mat-card> -->
+</div>
