--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -1,10 +1,9 @@
-
-  <!-- <input  class="topic" *ngIf="!TopicSelected" type="text" placeholder="Enter Topic" [(ngModel)]="topic"> -->
+<!-- <input  class="topic" *ngIf="!TopicSelected" type="text" placeholder="Enter Topic" [(ngModel)]="topic"> -->
 
 <button class="play" mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 <!-- <div> -->
-    <!-- <mat-progress-bar *ngIf ="!start && TopicSelected" mode="indeterminate"></mat-progress-bar> -->
-    <div class="waiting" *ngIf="!start && TopicSelected">Starting Quiz...</div>
+<!-- <mat-progress-bar *ngIf ="!start && TopicSelected" mode="indeterminate"></mat-progress-bar> -->
+<div class="waiting" *ngIf="!start && TopicSelected">Starting Quiz...</div>
 <div *ngIf="start && !gameOver" class="md-elevation-z24">
   <mat-card class="questions">
     {{currentQuestion.question}}
@@ -17,21 +16,20 @@
       </mat-radio-button>
     </mat-radio-group>
   </mat-card>
-  </div>
+</div>
 
-  <mat-card *ngIf="start && !gameOver" class="score">
-    Your Score is {{score}}
-  </mat-card>
-  <!-- </div> -->
+<mat-card *ngIf="start && !gameOver" class="score">
+  Your Score is {{score}}
+</mat-card>
+<!-- </div> -->
 
 
-  <mat-card class="gameover"  *ngIf="start && gameOver" >
-    <mat-card-title >Your Final Score is {{score}} </mat-card-title>
-       <button mat-raised-button class="goBack" [routerLink]="['/play']">Go Back</button>
-       <br><br>
-    </mat-card>
+<mat-card class="gameover" *ngIf="start && gameOver">
+  <mat-card-title>Your Final Score is {{score}} </mat-card-title>
+  <button mat-raised-button class="goBack" [routerLink]="['/play']">Go Back</button>
+  <br><br>
+</mat-card>
 
-  <progress-bar  *ngIf="start && !gameOver" [progress]="counter*10"
-    [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67',
+<progress-bar *ngIf="start && !gameOver" [progress]="counter*10" [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67',
     '60': '#04415A','70': '#03384D','80': '#032F41','90': '#022634','100': '#021C27'}">
-  </progress-bar>
+</progress-bar>
