--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -13,8 +13,8 @@
     {{currentQuestion.question}}
     <br>
     <br>
-    <mat-radio-group class="options">
-      <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o)">
+    <mat-radio-group class="options" *ngIf="!answered">
+      <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o); answered = true">
         {{o}}<br>
       </mat-radio-button>
     </mat-radio-group>
