--- a/src/app/four-players/four-players.component.html
+++ b/src/app/four-players/four-players.component.html
@@ -6,10 +6,10 @@
 </div>
 
 <div *ngIf="start && !gameOver">
-  <mat-card class="questions">
+  <mat-card class="questions" *ngIf="!answered">
     <h2>{{currentQuestion.question}}</h2><br>
     <mat-radio-group class="options">
-      <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o)">
+      <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o); answered = true">
         {{o}}<br>
       </mat-radio-button>
     </mat-radio-group>
