--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -26,7 +26,7 @@
 
 <mat-card class="gameover" *ngIf="start && gameOver">
   <mat-card-title>Your Final Score is {{score}} </mat-card-title>
-  <button mat-raised-button class="goBack" [routerLink]="['/play/:id']">Go Back</button>
+  <button mat-raised-button class="goBack" [routerLink]="['/play/topic']">Go Back</button>
   <br><br>
 </mat-card>
 
