--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -1,3 +1,34 @@
+.quizrt-c-gameplay {
+  height: 100vh;
+  width: 100%;
+  background: #403dd5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.quizrt-c-gameplay__loader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.quizrt-c-gameplay__loader__image {
+  height: 100px;
+  width: 100px;
+}
+
+.quizrt-c-text {
+  color: white;
+}
+
+.quizrt-c-gameplay__loader__msg {
+
+  margin-top: 20px;
+}
+
 .questions{
   width:80%;
   /* opacity: 0; */
@@ -12,6 +43,7 @@
   box-shadow: 20px 10px 10px #021C27;
   z-index: 100;
 }
+
 #clock{
   width:30%;
   height: 3rem;
