--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import url('https://fonts.googleapis.com/css?family=Unlock');
+@import url('https://fonts.googleapis.com/css?family=Product+Sans:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
 
-
-body{
-   background-color: #F0F3BD;
-   font-family: 'Unlock', cursive;
+html {
+  height: 100%;
 }
 
+body {
+  min-height: 100%;
+  font-family: 'Product Sans';
+  font-size: 1em;
+  margin: 0%;
+}
+
+* {
+  font-family: 'Product Sans'
+}
+
+.mat-form-field-label, .mat-form-field-underline {
+  color: white !important;
+}
+
+.mat-form-field-underline {
+  background-color: white !important;
+}
