--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -86,7 +86,7 @@
 
 button{
   margin-top:3rem;
-  margin-left: 18rem;
+  /* margin-left: 18rem; */
    /* width:5rem; */
   height:3rem;
   font-style: bold;
