--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,7 +5,7 @@
     <div class="quizrt-c-container__title">
       <h1>QuizRT</h1>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perspiciatis voluptate reiciendis distinctio quibusdam maxime asperiores in quam porro delectus laborum fugit cum aut totam a aperiam assumenda, laboriosam id.</div>
-      <button mat-button class="quizrt-c-begin_btn" [routeLink]="['login']">Begin</button>
+      <button mat-button class="quizrt-c-begin_btn" [routerLink]="['login']">Begin</button>
     </div>
     <div class="quizrt-c-topic__container">
       <mat-card class="quizrt-c-topic__card" *ngFor="let topic of topics" class="quizrt-c-topics">
