--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -153,13 +153,11 @@ mat-grid-list{
   font-size: 25px;
 }
 .back{
-  margin-left: 30%;
-  height:3rem;
-  background-color: #02C39A;
-  color: white;
-  font-style: bold;
-  font-size: 25px;
-  width: 30%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .result{
   color: #02C39A;
