--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -158,6 +158,9 @@ mat-grid-list{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width:60%;
+  font-size: 25px;
+
 }
 .result{
   color: #02C39A;
