--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -156,9 +156,9 @@ mat-grid-list{
 
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   width:60%;
+  margin-left: 20%;
   font-size: 25px;
 
 }
