--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -160,8 +160,9 @@ mat-grid-list{
   width:60%;
   margin-left: 20%;
   font-size: 25px;
-  text-align: center;
+  align-content: center;
   background-color: #02C39A;
+  font-style: normal;
 
 }
 .result{
