--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -52,16 +52,16 @@
 
 <div class="result">
   <mat-card *ngIf="start && gameOver && score>otherUserScore">You Win<br>
-    <button mat-raised-button [routerLink]="['/play']">
-      Go Back</button>
+    <button mat-raised-button (click)="Home()">
+      Home</button>
   </mat-card>
   <mat-card *ngIf="start && gameOver && score<otherUserScore">Opponent Wins<br>
-    <button mat-raised-button [routerLink]="['/play']">
-      Go Back</button>
+    <button mat-raised-button (click)="Home()">
+      Home</button>
   </mat-card>
   <mat-card *ngIf="start && gameOver && score === otherUserScore">It's a Draw<br>
-    <button mat-raised-button [routerLink]="['/play']">
-      Go Back</button>
+    <button mat-raised-button (click)="Home()">
+      Home</button>
   </mat-card>
 </div>
 
