--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
     <img class="quizrt-c-logo" src="../../assets/img/shapes-tranparent.gif" alt="" srcset="">
     <div class="quizrt-c-container__title">
       <h1>QuizRT</h1>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perspiciatis voluptate reiciendis distinctio quibusdam maxime asperiores in quam porro delectus laborum fugit cum aut totam a aperiam assumenda, laboriosam id.</div>
+      <div>Play against the best minds of the world!!</div>
       <button mat-button class="quizrt-c-begin_btn" [routerLink]="['login']">Begin</button>
     </div>
     <div class="quizrt-c-topic__container">
