--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -1,4 +1,4 @@
-<div class="quizrt-c-gameplay">
+<div class="quizrt-c-gameplay" *ngIf="waiting">
   <div *ngIf="waiting; else gameplay" class="quizrt-c-gameplay__loader">
     <img class="quizrt-c-gameplay__loader__image" src="../../assets/img/gameplay-loader.gif" alt="" srcset="">
     <h5 class="quizrt-c-gameplay__loader__msg quizrt-c-text">Waiting for the Opponent to join</h5>
