--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -163,6 +163,7 @@ mat-grid-list{
   align-content: center;
   background-color: #02C39A;
   font-style: normal;
+  text-align: center;
 
 }
 .result{
