--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -1,6 +1,6 @@
 
   .waiting {
-  background-image: url('./assets/img/gameplay-loader.gif');
+  /* background-image: url('./assets/img/gameplay-loader.gif'); */
   background-repeat: no-repeat;
   height:100vh;
   background-size: cover;
