--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -116,6 +116,9 @@ mat-grid-list{
   font-style: normal;
   align-items: center;
   justify-content: space-between;
+
+}
+.back button{
   padding-left: 5%;
   padding-right: 5%;
 
