--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -58,7 +58,7 @@
   </mat-card>
   <mat-card *ngIf="start && gameOver && score<otherUserScore">Opponent Wins<br>
     <button mat-raised-button (click)="Home()">
-      Home</button>
+      Home</button>`  
   </mat-card>
   <mat-card *ngIf="start && gameOver && score === otherUserScore">It's a Draw<br>
     <button mat-raised-button (click)="Home()">
