--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -13,8 +13,8 @@
   font-size: 25px;
   color:#021C27;
   border-color:#021C27;
-  background-color: #838568;
-  border-radius: 10px;
+  background-color: whitesmoke;
+  border-radius: 8px;
   border-width: 10px;
   box-shadow: 20px 10px 10px #021C27;
   z-index: 100;
@@ -26,7 +26,7 @@
   /* opacity: 0; */
   margin: auto;
   color:#021C27;
-  background-color:#838568;
+  background-color:whitesmoke;
 
   }
 
@@ -38,7 +38,7 @@
   margin: auto;
   margin-top:10px;
   text-align: center;
-  border-radius:10px;
+  border-radius: 8px;
   }
 
   .gameover{
