--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -53,20 +53,10 @@
   font-size: 20px;
   color:white;
   text-align: center;
-  /* position: fixed; */
-  /* bottom: 0;
-  margin-left: 40%;
-  margin-right: 40%; */
+
  }
 
-/* .questions{
-  width:80%; */
-  /* opacity: 0; */
-  /* margin: auto;
-  font-size: 25px;
-  color:white;
-  background-color:#02C39A;
-} */
+
 .options{
   display: inline-flex;
   flex-direction: column;
@@ -136,6 +126,10 @@ mat-grid-list{
    font-size: 25px;
    width: 30%;
 }
+ .two-players{
+   background-color:#403dd5;
+   width:100%;
+ }
 
 
 @media(max-width:767px){
