--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -129,6 +129,8 @@ mat-grid-list{
  .two-players{
    background-color:#403dd5;
    width:100%;
+   height:100%;
+   box-sizing: border-box;
  }
 
 
