--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -5,6 +5,20 @@
   height:100vh;
   background-size: cover;
 }
+
+.single-player{
+  height: 100vh;
+  width: 100%;
+  background: #403dd5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.quizrt-c-gameplay__loader__image {
+  height: 100px;
+  width: 100px;
+}
 .questions{
   width:80%;
   /* opacity: 0; */
