--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -4,6 +4,8 @@
   background-repeat: no-repeat;
   height:100vh;
   background-size: cover;
+  color:white;
+  margin-top: 30%;
 }
 
 .single-player{
@@ -18,6 +20,7 @@
 .quizrt-c-gameplay__loader__image {
   height: 100px;
   width: 100px;
+  margin-top: 30%;
 }
 .questions{
   width:80%;
