--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -1,4 +1,11 @@
 
+
+.quizrt-l-container {
+  height: 100vh;
+  width: 100%;
+  background: #403dd5;
+}
+
   .waiting {
   /* background-image: url('./assets/img/gameplay-loader.gif'); */
   background-repeat: no-repeat;
@@ -9,9 +16,6 @@
 }
 
 .single-player{
-  height: 100vh;
-  width: 100%;
-  background: #403dd5;
   display: flex;
   flex-direction: column;
   align-items: center;
