--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -32,6 +32,7 @@
     <mat-card-title>Your Final Score is {{score}} </mat-card-title>
     <button mat-raised-button class="goBack" (click)="Home()">Home</button>
     <br><br>
+    </mat-card>
 
   <progress-bar *ngIf="start && !gameOver" [progress]="counter*10" [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67',
       '60': '#04415A','70': '#03384D','80': '#032F41','90': '#022634','100': '#021C27'}">
