--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -46,6 +46,7 @@
   background-color: whitesmoke;
   border-radius: 8px;
   border-width: 10px;
+  font-family: 'Product Sans';
   /* box-shadow: 20px 10px 10px #021C27; */
   /* z-index: 100; */
 }
@@ -57,6 +58,7 @@
   margin: auto;
   color:#021C27;
   background-color:whitesmoke;
+  font-family: 'Product Sans';
 
   }
 
@@ -151,10 +153,12 @@ mat-grid-list{
    .questions{
     font-size: 15px;
     margin-top: 3rem;
+    font-family: 'Product Sans';
   }
 
  .result{
   margin-top: 7rem;
+  font-family: 'Product Sans';
  }
 .result .button{
  font-size: 15px;
