--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,6 +1,7 @@
 .quizrt-l-container__wrapper {
   display: flex;
   height: 100%;
+  width: 100%;
 }
 
 .quizrt-l-container__aside {
@@ -10,7 +11,7 @@
   background: url('../../assets/img/mirror-rocket.png');
   background-size: cover;
   background-position: 60%;
-  flex: 4;
+  flex: 1;
 }
 
 .quizrt-l-container {
@@ -23,7 +24,7 @@
   padding-right: 15px;
   padding-top: 6em;
   display: flex;
-  flex: 1 0 0;
+  flex: 1;
   flex-direction: column;
 }
 
@@ -90,9 +91,30 @@
 @media (min-width: 800px) {
   .quizrt-l-container__aside {
     display: block;
-    flex: 1 0 0;
+    width: 40%;
   }
   .quizrt-l-container {
+    width: 50%;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 40px rgba(0,0,0,0.22);
+  }
+
+  .quizrt-c-topic__container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 1px transparent;
+	-webkit-box-shadow: inset 0 0 1px transparent;
+	border-radius: 10px;
+  background-color: #F5F5F5;
+  }
+
+  .quizrt-c-topic__container::-webkit-scrollbar {
+    width: 3px;
+    border-radius: 20px;
+    background-color: #F5F5F5;
+  }
+
+  .quizrt-c-topic__container::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,.3);
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,.3);
+    background-color: grey;
   }
 }
