--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -1,104 +1,134 @@
-
-
 .quizrt-l-container {
   height: 100vh;
   width: 100%;
   background: #403dd5;
-  /* box-sizing: border-box; */
-}
-
-  .waiting {
-  /* background-image: url('./assets/img/gameplay-loader.gif'); */
-  background-repeat: no-repeat;
-  height:100vh;
-  background-size: cover;
-  color:white;
-  margin-top: 30%;
-}
-
-.single-player{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.waiting {
+  background-repeat: no-repeat;
+  height: 100%;
+  padding-top: 20px;
+  background-size: cover;
+  color: white;
+}
+
+.single-player {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-self: center;
   justify-content: center;
 }
+
 .quizrt-c-gameplay__loader__image {
   height: 100px;
   width: 100px;
   margin-top: 30%;
 }
-.questions{
-  width:80%;
-  /* opacity: 0; */
-  margin: auto;
-  margin-top:5rem;
-  font-size: 25px;
-  color:#021C27;
-  border-color:#021C27;
-  background-color: whitesmoke;
-  border-radius: 8px;
-  border-width: 10px;
-  font-family: 'Product Sans';
-  /* box-shadow: 20px 10px 10px #021C27; */
-  /* z-index: 100; */
+
+.question-start-timer {
+  height: 100%;
+  width: 100%;
+  background-size: 100% 200%;
+  background-image: linear-gradient(to bottom, #F06543  50%, white 50%);
+  -webkit-transition: background-position 10s;
+  -moz-transition: background-position 10s;
+  animation: an 10s;
+  animation-iteration-count: 7;
+  transition: all ease-in;
 }
-.options{
+
+@keyframes an {
+  from {
+    background-position: 0% 100%;
+  }
+  to {
+    background-position: 0% 200%;
+  }
+}
+
+@-webkit-keyframes an{
+  from {
+    background-position: 0% 100%;
+  }
+  to {
+    background-position: 0 -100%;
+  }
+}
+
+.question-container {
+  display: flex;
+  padding: 30px;
+  flex-direction: column;
+}
+
+.questions {
+  width: 100% !important;
+  min-width: 100% !important;
+  /* margin: 30px 20px 30px; */
+  color: #021C27;
+  border-radius: 8px;
+}
+
+.options {
+  width:80%;
+  font-size: 1.2em !important;
+  margin: auto;
   display: inline-flex;
   flex-direction: column;
-  width:80%;
-  /* opacity: 0; */
-  margin: auto;
-  color:#021C27;
-  background-color:whitesmoke;
   font-family: 'Product Sans';
+}
 
-  }
+.question-title {
+  flex-wrap: wrap;
+}
 
- .score{
-  background-color:rgb(38, 124, 106);
-  color:whitesmoke;
-  width:80%;
-  /* opacity: 0; */
-  margin: auto;
+.score {
   margin-top:10px;
   text-align: center;
-  border-radius: 8px;
+  border-radius: 16px;
+  padding: 10px;
+  background: whitesmoke;
+}
+
+.gameover {
+  margin: auto;
+  margin-top: 5rem;
   font-family: 'Product Sans';
-  }
+}
 
-  .gameover{
-    /* width:60%;
-    height:60%; */
-    margin:auto;
-    margin-top:5rem;
-    color:white;
-    background: #403dd5;
+.goBack {
+  margin: auto;
+}
+
+@media(min-width: 800px) {
+
+}
+
+@media(max-width:767px) {
+  .play{
+    height:3rem;
+    margin-left: 30%;
+    font-size: 15px;
+    width: 40%;
+    }
+  .questions{
+    font-size: 15px;
+    margin-top: 3rem;
     font-family: 'Product Sans';
-    }
-   .goBack{
-    margin: auto;
-    }
-
-  @media(max-width:767px){
-    .play{
-      height:3rem;
-      margin-left: 30%;
-      font-size: 15px;
-      width: 40%;
-     }
-    .questions{
-      font-size: 15px;
-      margin-top: 3rem;
-      font-family: 'Product Sans';
-    }
-   .gameover{
-     margin-top: 7rem;
-     font-family: 'Product Sans';
-   }
-   .score{
-     font-size: 20px;
-   }
-   .goBack{
-     font-size: 15px;
-   }
   }
+  .gameover{
+    margin-top: 7rem;
+    font-family: 'Product Sans';
+  }
+  .score{
+    font-size: 20px;
+  }
+  .goBack{
+    font-size: 15px;
+  }
+}
