single player check

--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -34,7 +34,7 @@
     <br><br>
     </mat-card>
 
-  <progress-bar *ngIf="start && !gameOver" [progress]="counter*10" [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67',
-      '60': '#04415A','70': '#03384D','80': '#032F41','90': '#022634','100': '#021C27'}">
+  <progress-bar *ngIf="start && !gameOver" [progress]="counter*10" [color-degraded]="{'10': '#1B7397', '20': '#C2B9C1', '30':'#B3A8B2','40': '#958694','50': '#776375',
+      '60': '#594157','70': '#493648','80': '#392A38','90': '#291E28','100': '#191218'}">
   </progress-bar>
 </div>
