buttons for options

--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -84,10 +84,10 @@
     left: 90%
 }
 
-.noOpponent{
-  /* color: #02C39A; */
-  /* font-size: 25px; */
-}
+/* .noOpponent{
+  color: #02C39A; */
+  /* font-size: 25px;
+}*/
 
 .back{
   display: inline-flex;
