buttons for options

--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -20,7 +20,7 @@
           <!-- </mat-radio-button> -->
         <!-- </mat-radio-group> -->
       <!-- </mat-card-content> -->
-      <mat-button-toggle-group class="options" cols="2" row-height="5:1.5" [disabled]="!answered">
+      <mat-button-toggle-group class="options" [disabled]="!answered">
         <mat-button-toggle *ngFor="let o of options" (click)= "scoreCalculator(o); answered=true;">{{o}}</mat-button-toggle>
       </mat-button-toggle-group>
 
